[gd_scene load_steps=10 format=3 uid="uid://dok8doaly7syk"]

[ext_resource type="Script" path="res://ExplosionBullet.gd" id="1_nduwd"]
[ext_resource type="Texture2D" uid="uid://baoi6n6ttc3e8" path="res://Assets/bomb.png" id="2_gs76t"]
[ext_resource type="Texture2D" uid="uid://bqrkva7x5abfh" path="res://Assets/explosion-6.png" id="3_mlsxf"]
[ext_resource type="AudioStream" uid="uid://dvc5ocjroeqmg" path="res://Assets/Sounds/Explosion.wav" id="4_x2vdh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_clcwx"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5kekn"]
radius = 42.0476

[sub_resource type="Animation" id="Animation_nl7tv"]
resource_name = "Explosion"
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_wpt2i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f5avd"]
_data = {
"Explosion": SubResource("Animation_nl7tv"),
"RESET": SubResource("Animation_wpt2i")
}

[node name="ExplosionBullet" type="Area2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_nduwd")

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(68, 1)
scale = Vector2(0.257778, 0.257778)
texture = ExtResource("2_gs76t")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(66, 6)
shape = SubResource("CircleShape2D_clcwx")

[node name="ExplosionShape" type="CollisionShape2D" parent="."]
position = Vector2(65, 6)
shape = SubResource("CircleShape2D_5kekn")

[node name="Explosion" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(66, 6)
scale = Vector2(2.33333, 2.33333)
texture = ExtResource("3_mlsxf")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f5avd")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Explosion2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_x2vdh")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
